# crazyflie_mpc

./: package.xml  readme.md  setup.py
crazyflie_mpc/: controller_utils.py  full_state_ctrl.py  mpc_node.py  package.xml  readme.md  setup.cfg  setup.py  simple_mpc_node.py
crazyflie_mpc/controllers/: embotech_mpc.py  oqsp_mpc.py  oqsp_mpc_test.py  simple_mpc.py
crazyflie_mpc/crazyflie_mpc/: crazyflie_mpc.py  mpc_external_planner_node.py  mpc_node.py
crazyflie_mpc/crazyflie_mpc/controllers/: oqsp_mpc.py
crazyflie_mpc/examples/: spiral_trajectory.py
crazyflie_mpc/launch/: mpc_external_planner_launch.py  mpc_launch.py  spiral_example.launch.py
crazyflie_mpc_msgs/: CMakeLists.txt  package.xml
crazyflie_mpc_msgs/srv/: ReferenceTrajectory.srv
launch/: full_cmd_launch.py  simple_mpc_launch.py
