<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_mpc</name>
  <version>0.1.0</version>
  <description>MPC Controller for Crazyflie 2.1 quadcopter.</description>
  <maintainer email="matthewwilliamlock@gmail.com">Matthew Lock</maintainer>
  <license>MIT</license>

  <depend>crazyflie_mpc_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
